--- a/React-Project-1/src/App.css
+++ b/React-Project-1/src/App.css
@@ -77,7 +77,7 @@ i {
   background-color: rgb(49, 49, 247);
 }
 .fa-check {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 .card-details .fa-xmark,
 .lite {
